cluster/prod/resilio-sync/resilio-sync/resilio-sync-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resilio-sync
  namespace: resilio
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-middlewares-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: traefik-secure-tlsoptions@kubernetescrd
  labels:
    app.kubernetes.io/instance: resilio-sync
    app.kubernetes.io/name: resilio-sync
spec:
  ingressClassName: traefik
  rules:
  - host: resilio.nathanpawelek.com
    http:
      paths:
      - backend:
          service:
            name: resilio-sync
            port:
              number: 8888
        path: /
        pathType: ImplementationSpecific
  tls:
  - secretName: nathanpawelek-com-tls
